# chronicle

./: .editorconfig  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yml  .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  FEATURE_MATURITY.md  LICENSE  Makefile  README.md  SECURITY.md  STABLE_API.md  TEST_QUALITY_ANALYSIS.md  adaptive_codec_selector.go  adaptive_codec_selector_test.go  adaptive_compression.go  adaptive_compression_test.go  adaptive_compression_trial.go  adaptive_compression_v2.go  adaptive_compression_v2_test.go  adaptive_compression_v3.go  adaptive_compression_v3_test.go  adaptive_optimizer.go  adaptive_optimizer_test.go  adaptive_sampling.go  adaptive_sampling_test.go  admin_ui.go  admin_ui_api_admin_test.go  admin_ui_api_alerts_test.go  admin_ui_api_data_test.go  admin_ui_api_ops_test.go  admin_ui_api_search_test.go  admin_ui_api_visual_test.go  admin_ui_bridge.go  admin_ui_bridge_test.go  (+942 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
cmd/: README.md
compat/: compat.go  compat_test.go
contrib/: README.md
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  BOUNTY_PROGRAM.md  CI.md  CLI_REFERENCE.md  CNCF_SUBMISSION.md  CODE_MAP.md  COMMUNITY_SETUP.md  COMPARISON.md  COMPLIANCE_GUIDE.md  CONFERENCE_TALK.md  CONFIGURATION.md  CONTRIBUTOR_ONBOARDING.md  CORE_API.md  DEMO_5_MINUTES.md  DEMO_RECORDING.md  DEVELOPMENT.md  EDGE_DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  FAQ.md  FEATURES.md  (+16 more)
ffi/rust/: Cargo.toml
ffi/rust/src/: lib.rs
(+427 files in other folders)
