[package]
name = "chronicle"
version = "0.1.0"
edition = "2021"
authors = ["Chronicle Authors"]
description = "Rust bindings for the Chronicle embedded time-series database"
license = "Apache-2.0"
repository = "https://github.com/chronicle-db/chronicle"
documentation = "https://docs.rs/chronicle"
readme = "README.md"
keywords = ["time-series", "database", "embedded", "iot", "metrics"]
categories = ["database", "embedded"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.0"

[lib]
name = "chronicle"
crate-type = ["lib"]

# Link to the Chronicle shared library
# Users should ensure libchronicle is in their library path
[build-dependencies]

[features]
default = []
